KService: Initialize menuId

It looks like we never initialize this menuId with the desktopEntryName,
unless it's accessed through VFolderMenu.

This patch makes sure we initialize it during KService creation.

BUG: 505066